test/neg/.gold/ex012.hsq.err
Warning {hsq@2867}(ex012.hsq:5) unresolved 'f'
Error: Sqasm: unresolved symbols:  {_f:93}
